unpackaged/main/default/objects/Account/fields/Online_Booking_Reservation_Website__c.field-meta.xml
<CustomField>
    <fullName>Online_Booking_Reservation_Website__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Online Booking Reservation Website</label>
    <type>Url</type>
</CustomField>