unpackaged/main/default/objects/Account/fields/Online_Reservation_Platform__c.field-meta.xml
<CustomField>
    <fullName>Online_Reservation_Platform__c</fullName>
    <label>Online Reservation Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opentable</fullName>
            </value>
            <value>
                <fullName>Reserve</fullName>
            </value>
            <value>
                <fullName>Resy</fullName>
            </value>
            <value>
                <fullName>Seven Rooms</fullName>
            </value>
            <value>
                <fullName>Tock</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>