unpackaged/main/default/objects/Account/fields/Overhours_Charged_During_the_Month__c.field-meta.xml
<CustomField>
    <fullName>Overhours_Charged_During_the_Month__c</fullName>
    <label>Overhours Charged During the Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>