unpackaged/main/default/objects/Account/fields/Overhours_Notes__c.field-meta.xml
<CustomField>
    <fullName>Overhours_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Overhours Notes</label>
    <type>TextArea</type>
</CustomField>