unpackaged/main/default/objects/Account/fields/Overhours_Rate__c.field-meta.xml
<CustomField>
    <fullName>Overhours_Rate__c</fullName>
    <label>Overhours Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>