unpackaged/main/default/objects/Account/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please only add exceptions, meaning vendor does not take AMEX or vendor will only take cash.</inlineHelpText>
    <label>Payment Method</label>
    <type>TextArea</type>
</CustomField>