unpackaged/main/default/objects/Account/fields/PDR_Capacity__c.field-meta.xml
<CustomField>
    <fullName>PDR_Capacity__c</fullName>
    <label>PDR Capacity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seated: 15 and under</fullName>
            </value>
            <value>
                <fullName>Seated: 16-25</fullName>
            </value>
            <value>
                <fullName>Seated: 26-50</fullName>
            </value>
            <value>
                <fullName>Seated: 51-100</fullName>
            </value>
            <value>
                <fullName>Seated: more than 100</fullName>
            </value>
            <value>
                <fullName>Standing: 10-30</fullName>
            </value>
            <value>
                <fullName>Standing: 31-50</fullName>
            </value>
            <value>
                <fullName>Standing: 51-100</fullName>
            </value>
            <value>
                <fullName>Standing: more than 100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>