unpackaged/main/default/objects/Account/fields/PDR_Event_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>PDR_Event_Contact_Info__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Include phone number, email, and contacts if applicable</inlineHelpText>
    <label>PDR/Event Contact Info</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>