unpackaged/main/default/objects/Account/fields/Personal_Group__c.field-meta.xml
<CustomField>
    <fullName>Personal_Group__c</fullName>
    <label>Personal/Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group Account</fullName>
            </value>
            <value>
                <fullName>Personal Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>