unpackaged/main/default/objects/Account/fields/Phone_Lines_Open__c.field-meta.xml
<CustomField>
    <fullName>Phone_Lines_Open__c</fullName>
    <label>Phone Lines Open</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before 7am EST</fullName>
            </value>
            <value>
                <fullName>7am EST</fullName>
            </value>
            <value>
                <fullName>8am EST</fullName>
            </value>
            <value>
                <fullName>9am EST</fullName>
            </value>
            <value>
                <fullName>10am EST</fullName>
            </value>
            <value>
                <fullName>11am EST</fullName>
            </value>
            <value>
                <fullName>12 noon EST</fullName>
            </value>
            <value>
                <fullName>1pm EST</fullName>
            </value>
            <value>
                <fullName>after 1pm EST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>