unpackaged/main/default/objects/Account/fields/Phone_Other__c.field-meta.xml
<CustomField>
    <fullName>Phone_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone (Other)</label>
    <type>Phone</type>
</CustomField>