unpackaged/main/default/objects/Account/fields/Phone_Tips__c.field-meta.xml
<CustomField>
    <fullName>Phone_Tips__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Tips</label>
    <type>TextArea</type>
</CustomField>