unpackaged/main/default/objects/Account/fields/Price_Point__c.field-meta.xml
<CustomField>
    <fullName>Price_Point__c</fullName>
    <label>Price Point</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$</fullName>
            </value>
            <value>
                <fullName>$$</fullName>
            </value>
            <value>
                <fullName>$$$</fullName>
            </value>
            <value>
                <fullName>$$$$</fullName>
            </value>
            <value>
                <fullName>$$$$$</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>