unpackaged/main/default/objects/Account/fields/Private_Semi_Private_Dining_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Private_Semi_Private_Dining_Capacity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Ex. Private Room: 12 seated, 20 standing</inlineHelpText>
    <label>Private/Semi Private Dining Capacity</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>