unpackaged/main/default/objects/Account/fields/Questionnaire_Completed_By_1__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Completed_By_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire Completed By (1)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Questionnaire Completed By 1</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>