unpackaged/main/default/objects/Account/fields/Questionnaire_Completed_By_2__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Completed_By_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire Completed By (2)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Questionnaire Completed By (2)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>