unpackaged/main/default/objects/Account/fields/Questionnaire_Completed_By_3__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Completed_By_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire Completed By (3)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Questionnaire Completed By (3)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>