unpackaged/main/default/objects/Account/fields/Ranking__c.field-meta.xml
<CustomField>
    <fullName>Ranking__c</fullName>
    <label>Ranking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st choice</fullName>
            </value>
            <value>
                <fullName>2nd choice</fullName>
            </value>
            <value>
                <fullName>Suitable Vendor</fullName>
            </value>
            <value>
                <fullName>Haven't Vetted</fullName>
            </value>
            <value>
                <fullName>Don't Use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>