unpackaged/main/default/objects/Account/fields/Reason_Don_t_Use__c.field-meta.xml
<CustomField>
    <fullName>Reason_Don_t_Use__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason Don’t Use</label>
    <type>TextArea</type>
</CustomField>