unpackaged/main/default/objects/Account/fields/Recommendation_Details__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recommendation Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>