unpackaged/main/default/objects/Account/fields/Reconfirmation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reconfirmation_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reconfirmation Notes</label>
    <type>TextArea</type>
</CustomField>