unpackaged/main/default/objects/Account/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referred Accounts</relationshipLabel>
    <relationshipName>ReferredAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>