unpackaged/main/default/objects/Account/fields/Rep_By__c.field-meta.xml
<CustomField>
    <fullName>Rep_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affiliation 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliated Accounts (Affiliation 2)</relationshipLabel>
    <relationshipName>Accounts_Affiliation_2</relationshipName>
    <type>Lookup</type>
</CustomField>