unpackaged/main/default/objects/Account/fields/Reports_Sent_To_Text__c.field-meta.xml
<CustomField>
    <fullName>Reports_Sent_To_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reports Sent To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>