unpackaged/main/default/objects/Account/fields/Reservation_Email__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reservation Email</label>
    <type>Email</type>
</CustomField>