unpackaged/main/default/objects/Account/fields/Reservation_Text__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Phone number the Vendor uses to accept and communicate regarding bookings via Text Message. This isn’t the same as a reservation contacts personal cell</inlineHelpText>
    <label>Reservation Text</label>
    <type>Phone</type>
</CustomField>