unpackaged/main/default/objects/Account/fields/Retainer_Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Billing_Frequency__c</fullName>
    <label>Retainer Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>