unpackaged/main/default/objects/Account/fields/Retainer_Card__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retainer Card</label>
    <referenceTo>Payment_Method__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>