unpackaged/main/default/objects/Account/fields/Retainer_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Payment_Method__c</fullName>
    <label>Retainer Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Amex</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>VENMO</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>