unpackaged/main/default/objects/Account/fields/Review_Description_After_First_Line__c.field-meta.xml
<CustomField>
    <fullName>Review_Description_After_First_Line__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Review/Description - After First Line</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>