unpackaged/main/default/objects/Account/fields/Review_Description_First_Line__c.field-meta.xml
<CustomField>
    <fullName>Review_Description_First_Line__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Review/Description - First Line</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>