unpackaged/main/default/objects/Account/fields/Review_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>Review_Rich_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Review Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>