unpackaged/main/default/objects/Account/fields/Rewards_Program_Phone__c.field-meta.xml
<CustomField>
    <fullName>Rewards_Program_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rewards Program Phone</label>
    <type>Phone</type>
</CustomField>