unpackaged/main/default/objects/Account/fields/Rez_List__c.field-meta.xml
<CustomField>
    <fullName>Rez_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rez List</label>
    <type>Checkbox</type>
</CustomField>