unpackaged/main/default/objects/Account/fields/Saturday_Close_Time__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Close_Time__c</fullName>
    <label>Saturday Close Time</label>
    <type>Time</type>
</CustomField>