unpackaged/main/default/objects/Account/fields/Saturday_Open_Time__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Open_Time__c</fullName>
    <label>Saturday Open Time</label>
    <type>Time</type>
</CustomField>