unpackaged/main/default/objects/Account/fields/Seating_Menu_Information__c.field-meta.xml
<CustomField>
    <fullName>Seating_Menu_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seating &amp; Menu Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>