unpackaged/main/default/objects/Account/fields/Seating_Times__c.field-meta.xml
<CustomField>
    <fullName>Seating_Times__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seating Times</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>