unpackaged/main/default/objects/Account/fields/Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Secondary Contact)</relationshipLabel>
    <relationshipName>Accounts9</relationshipName>
    <type>Lookup</type>
</CustomField>