unpackaged/main/default/objects/Account/fields/Standard_F_B_Min__c.field-meta.xml
<CustomField>
    <fullName>Standard_F_B_Min__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Ex. Private Room: $5,000</inlineHelpText>
    <label>Standard F&amp;B Min</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>