unpackaged/main/default/objects/Account/fields/Started_Doing_Business_With__c.field-meta.xml
<CustomField>
    <fullName>Started_Doing_Business_With__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the date we started working with this vendor.</inlineHelpText>
    <label>Started Doing Business With</label>
    <type>Date</type>
</CustomField>