unpackaged/main/default/objects/Account/fields/Style__c.field-meta.xml
<CustomField>
    <fullName>Style__c</fullName>
    <label>Key Factors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Beach Club</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Chef’s Table</fullName>
            </value>
            <value>
                <fullName>Counter Seating</fullName>
            </value>
            <value>
                <fullName>Distillery/Brewery</fullName>
            </value>
            <value>
                <fullName>Gluten-free</fullName>
            </value>
            <value>
                <fullName>Karaoke</fullName>
            </value>
            <value>
                <fullName>Kid Friendly</fullName>
            </value>
            <value>
                <fullName>Live Entertainment</fullName>
            </value>
            <value>
                <fullName>Lounge/Nightclub</fullName>
            </value>
            <value>
                <fullName>Outdoor Dining</fullName>
            </value>
            <value>
                <fullName>Rooftop</fullName>
            </value>
            <value>
                <fullName>Shiva Platters</fullName>
            </value>
            <value>
                <fullName>Sports Bar</fullName>
            </value>
            <value>
                <fullName>Tasting Menu</fullName>
            </value>
            <value>
                <fullName>TVs</fullName>
            </value>
            <value>
                <fullName>Waterfront</fullName>
            </value>
            <value>
                <fullName>Wine Bar</fullName>
            </value>
            <value>
                <fullName>British</fullName>
            </value>
            <value>
                <fullName>Gastronomic</fullName>
            </value>
            <value>
                <fullName>Afternoon Tea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>