unpackaged/main/default/objects/Account/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A/V</fullName>
            </value>
            <value>
                <fullName>Acupuncturist</fullName>
            </value>
            <value>
                <fullName>Adults Only</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Airline</fullName>
            </value>
            <value>
                <fullName>Airport</fullName>
            </value>
            <value>
                <fullName>Airport Concierge*</fullName>
            </value>
            <value>
                <fullName>Alcohol Store</fullName>
            </value>
            <value>
                <fullName>All Inclusive</fullName>
            </value>
            <value>
                <fullName>Antique Dealer/Rare Books</fullName>
            </value>
            <value>
                <fullName>Appliance Repair</fullName>
            </value>
            <value>
                <fullName>Aquarium</fullName>
            </value>
            <value>
                <fullName>Archery</fullName>
            </value>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Art Broker</fullName>
            </value>
            <value>
                <fullName>Arts &amp; Crafts</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Assisted Living Facility</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Auto Body Shop</fullName>
            </value>
            <value>
                <fullName>Ax Throwing</fullName>
            </value>
            <value>
                <fullName>Baby/Kids Store</fullName>
            </value>
            <value>
                <fullName>Baby Gear Rentals</fullName>
            </value>
            <value>
                <fullName>Babysitting/Nanny</fullName>
                <label>Babysitting / Nanny</label>
            </value>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Balloon Artist</fullName>
            </value>
            <value>
                <fullName>Balloon Vendor</fullName>
            </value>
            <value>
                <fullName>Boarder</fullName>
            </value>
            <value>
                <fullName>Book Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>