unpackaged/main/default/objects/Account/fields/Sunday_Close_Time__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Close_Time__c</fullName>
    <label>Sunday Close Time</label>
    <type>Time</type>
</CustomField>