unpackaged/main/default/objects/Account/fields/Sunday_Open_Time__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Open_Time__c</fullName>
    <label>Sunday Open Time</label>
    <type>Time</type>
</CustomField>