unpackaged/main/default/objects/Account/fields/Time_Online_Opens__c.field-meta.xml
<CustomField>
    <fullName>Time_Online_Opens__c</fullName>
    <label>Time Online Opens</label>
    <type>Time</type>
</CustomField>