unpackaged/main/default/objects/Account/fields/Toll_Free_Phone__c.field-meta.xml
<CustomField>
    <fullName>Toll_Free_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Toll Free Phone</label>
    <type>Phone</type>
</CustomField>