unpackaged/main/default/objects/Account/fields/Total_Overhour_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Overhour_Charge__c</fullName>
    <formula>Time_Overhours__c *  Overhours_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Overhour Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>