unpackaged/main/default/objects/Account/fields/Typical_Time_Charged_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Typical_Time_Charged_to_Client__c</fullName>
    <inlineHelpText>Based off of REZ list</inlineHelpText>
    <label>Typical Time Charged to Client</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>