unpackaged/main/default/objects/Account/fields/Vendor_Status__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Status__c</fullName>
    <formula>IF( Closed__c , 
IMAGE("/sfc/servlet.shepherd/version/download/0680b000003ofKr","Closed",32,32)  , null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Status</label>
    <type>Text</type>
</CustomField>