unpackaged/main/default/objects/Account/fields/Vendor_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Sub_Type__c</fullName>
    <label>Vendor Sub-Type - OLD</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>24 hours</fullName>
            </value>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Acupuncturist</fullName>
            </value>
            <value>
                <fullName>Airport</fullName>
            </value>
            <value>
                <fullName>Airport Escort</fullName>
            </value>
            <value>
                <fullName>All-Inclusive</fullName>
            </value>
            <value>
                <fullName>Alternative Medicine</fullName>
            </value>
            <value>
                <fullName>Appliance Repair</fullName>
            </value>
            <value>
                <fullName>Appraiser</fullName>
            </value>
            <value>
                <fullName>Art Mover</fullName>
            </value>
            <value>
                <fullName>Art Tour</fullName>
            </value>
            <value>
                <fullName>Audio/Visual</fullName>
            </value>
            <value>
                <fullName>Auto Body Shop</fullName>
            </value>
            <value>
                <fullName>Baby</fullName>
            </value>
            <value>
                <fullName>Baby/Kids Store</fullName>
            </value>
            <value>
                <fullName>Baby Gear Rentals</fullName>
            </value>
            <value>
                <fullName>Baby Proofing</fullName>
            </value>
            <value>
                <fullName>Babysitter</fullName>
            </value>
            <value>
                <fullName>Bag/Shoe Repair</fullName>
            </value>
            <value>
                <fullName>Bag Repair</fullName>
            </value>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Balloon Vendor</fullName>
            </value>
            <value>
                <fullName>Band</fullName>
            </value>
            <value>
                <fullName>Band / String Quartet / Singer</fullName>
            </value>
            <value>
                <fullName>Bed &amp; Breakfast</fullName>
            </value>
            <value>
                <fullName>Bike Tour</fullName>
            </value>
            <value>
                <fullName>Boat Captain</fullName>
            </value>
            <value>
                <fullName>Cake Maker/Bakery</fullName>
            </value>
            <value>
                <fullName>Car Dealership</fullName>
            </value>
            <value>
                <fullName>Caretaker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>