unpackaged/main/default/objects/Account/fields/Vendor_Type_New__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Type_New__c</fullName>
    <label>Vendor Type - OLD</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airline</fullName>
            </value>
            <value>
                <fullName>Art</fullName>
            </value>
            <value>
                <fullName>Baby</fullName>
            </value>
            <value>
                <fullName>Beverage Retail</fullName>
            </value>
            <value>
                <fullName>Caretakers</fullName>
            </value>
            <value>
                <fullName>Car Service</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>DMC</fullName>
            </value>
            <value>
                <fullName>Doctors</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Events/Party</fullName>
            </value>
            <value>
                <fullName>Events/Party Entertainment</fullName>
            </value>
            <value>
                <fullName>Fashion Retail</fullName>
            </value>
            <value>
                <fullName>Fashion Stylist</fullName>
            </value>
            <value>
                <fullName>Floral</fullName>
            </value>
            <value>
                <fullName>Food Retail</fullName>
            </value>
            <value>
                <fullName>Grade School</fullName>
            </value>
            <value>
                <fullName>Hair Stylist</fullName>
            </value>
            <value>
                <fullName>Home Retail</fullName>
            </value>
            <value>
                <fullName>Household</fullName>
            </value>
            <value>
                <fullName>Household Staffing</fullName>
            </value>
            <value>
                <fullName>Instructors</fullName>
            </value>
            <value>
                <fullName>Lawyer</fullName>
            </value>
            <value>
                <fullName>Legal Counsel/Attorney</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pre- School</fullName>
            </value>
            <value>
                <fullName>Rentals</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Spa/Health/Wellness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>