unpackaged/main/default/objects/Account/fields/Warned_By__c.field-meta.xml
<CustomField>
    <fullName>Warned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warned By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>