unpackaged/main/default/objects/Account/fields/X1_Contact_at_Insider__c.field-meta.xml
<CustomField>
    <fullName>X1_Contact_at_Insider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label># 1 Contact at Insider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (# 1 Contact at Insider)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>